@@ -22,10 +22,10 @@ import java.util.HashMap;
 public class DependencyBank {
 
 	//Versions
-	static String libgdxVersion = "1.9.3";
+	static String libgdxVersion = "1.9.4";
 	//Temporary snapshot version, we need a more dynamic solution for pointing to the latest nightly
-	static String libgdxNightlyVersion = "1.9.4-SNAPSHOT";
-	static String roboVMVersion = "2.1.0";
+	static String libgdxNightlyVersion = "1.9.5-SNAPSHOT";
+	static String roboVMVersion = "2.2.0";
 	static String moeVersion = "1.1.0.final-1";
 	static String buildToolsVersion = "23.0.1";
 	static String androidAPILevel = "20";
